--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ header{
     margin: auto;
     background-color:rgba(173,216,230,255);
     height:50px;
+    display:flex;
    
 }
 
@@ -20,23 +21,34 @@ header{
 
 .logo{
     width: 20%;
-    border: 1px black dashed;
+    border-right: 1px black dashed;
     height:30px;
+    display:flex;
+    align-items:center;
+    margin-left:5px;
 
 }
 
 .link{
     width: 60%;
-    border: 1px black dashed;
     height:30px;
-    text-align:center;
+    display:flex;
+    align-items:center;
+    justify-content:center;
 }
 
 .login{
     width:20%;
-    border: 1px black dashed;
+    border-left: 1px black dashed;
     height:30px;
+    display:flex;
+    align-items:center;
+    justify-content:flex-end;
+    margin-right:5px;
 }
+ 
+/*inizio prima sezione*/
+
 
 #first-sec{
     min-height:400px;
@@ -53,6 +65,8 @@ header{
     border: 1px black dashed;
     background-color:pink;
 }
+
+/*seconda sezione*/
 
 .central-section{
     min-height:450px;
@@ -78,6 +92,8 @@ header{
     border: 1px black dashed;
 }
 
+/*terza sezione*/
+
 .central-section2{
     background-color: rgb(201, 201, 201);
     min-height:450px;
@@ -101,7 +117,10 @@ header{
     background-color: rgb(1, 163, 1);
     width:1250px;
     height: 900px;
+    border: 1px black dashed;
 }
+
+/*quarta sezione*/
 
 #black-section{
     min-height:450px;
@@ -132,4 +151,39 @@ header{
     height:auto;
     width:25%;
     border:1px white dashed
+} 
+
+/*barra & logo*/
+
+
+footer{
+    margin: auto;
+    background-color:black;
+    height:100px;
+    width: auto;
+    margin-top: 1px;
+    display: flex;
+    justify-content:center;
+    align-items:center
 }
+
+#footer-block{
+    background-color: rgb(181, 255, 181);
+    width:1250px;
+    margin-top:auto;
+    height:80px;
+    display:flex;
+    flex-direction:row;
+    justify-content:space-between;
+    align-items:center;
+}
+
+#bottone-logo{
+    border:2px grey dashed;
+    background-color:rgb(236, 171, 171);
+ }
+
+#bottone-footer{
+    border:2px grey dashed;
+    background-color:rgb(236, 171, 171);
+ }
